# kuka-rsi-ros-interface

./: CMakeLists.txt  DataTemplate.xml  README.md  main.py  main2.py  package.xml
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_core/: CMakeLists.txt  package.xml
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_core/config/: config.yaml
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_core/launch/: start.launch
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_core/src/: KukaPose.cpp  KukaPose.h  KukaRsiRosInterface.cpp  KukaRsiRosInterface.h  RsiCommunicator.cpp  RsiCommunicator.h  main.cpp
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_msgs/msg/: KukaPose.msg
catkin_ws/src/kuka_rsi_ros_interface/kuka_rsi_ros_interface_msgs/srv/: GetPose.srv  MoveToPose.srv
krc_files/: RSI_Ethernet.rsi.xml  RSI_EthernetConfig.xml
src/: RsiCommunicator.cpp  RsiCommunicator.h  main.cpp
test/: main.py  python_poc2.py
