<?xml version="1.0"?>
<package format="1">
  <name>kuka_rsi_ros_interface_core</name>
  <version>0.0.1</version>
  <description>A ROS node for the manipulation of a KUKA robot arm via RSI 3.</description>

  <maintainer email="cjlhamilton@gmail.com">Caleb Hamilton</maintainer>

  <license>GPLv3</license>

  <!-- Type attributes: website, bugtracker, or repository -->
  <url type="website">https://github.com/cjlh/kuka-rsi-ros-interface</url>

  <author email="cjlhamilton@gmail.com">Caleb Hamilton</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kuka_rsi_ros_interface_msgs</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>kuka_rsi_ros_interface_msgs</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
